[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day-01"
path = "src/day-01/main.rs"

[[bin]]
name = "day-02"
path = "src/day-02/main.rs"

[[bin]]
name = "day-03"
path = "src/day-03/main.rs"

[[bin]]
name = "day-04"
path = "src/day-04/main.rs"

[[bin]]
name = "day-05"
path = "src/day-05/main.rs"

[[bin]]
name = "day-06"
path = "src/day-06/main.rs"

[[bin]]
name = "day-07"
path = "src/day-07/main.rs"

[[bin]]
name = "day-08"
path = "src/day-08/main.rs"

[[bin]]
name = "day-09"
path = "src/day-09/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
aho-corasick = "1.1.2"
bstr = "1.8.0"
fnv = "1.0.7"
itertools = "0.12.0"
mimalloc-rust = "0.2.1"
rayon = "1.8.0"
regex = "1.10.2"
smallvec = { version  = "1.11.2", features = ["write", "union", "const_generics", "const_new", "specialization", "may_dangle"] }

